--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>Blog Post</title>
     <link rel="stylesheet" type="text/css" href="cssblog/blogpost.css" />
-    <link rel="stylesheet" type="text/css" href="html/personalbloghomepage.html" />
+    <link rel="stylesheet" type="text/css" href="personalbloghomepage (1).html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
 <body>
