--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,11 @@
 <body>
     <h1><i>Traveling with Gen Z</i></h1>
   <br>
-
-
+<div class="nav">
+  <a href="personalbloghomepage (1).html">Back to Home Page</a>
+</div>
+  <br></br>
+  
 <div class="grid">
     <div>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dignissimos aspernatur deleniti! Sunt, iusto suscipit. Perferendis deleniti, inventore autem assumenda porro impedit repudiandae pariatur quae eaque sunt laboriosam error architecto.
