--- a/blogpost.html
+++ b/blogpost.html
@@ -1,75 +1,90 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8"/>
-    <title>Blog Post</title>
-    <link rel="stylesheet" type="text/css" href="cssblog/blogpost.css" />
-    <link rel="stylesheet" type="text/css" href="personalbloghomepage (1).html" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    </head>
-<body>
-    <h1><i>Traveling with Gen Z</i></h1>
-  <br>
-<div class="nav">
-  <a href="personalbloghomepage (1).html">Back to Home Page</a>
-</div>
-  <br></br>
-  
-<div class="grid">
-    <div>
+	<head>
+		<meta charset="utf-8"/>
+		<title>Blog Post</title>
+		<link rel="stylesheet" type="text/css" href="cssblog/blogpost.css" />
+		<link rel="stylesheet" type="text/css" href="personalbloghomepage (1).html" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		</head>
+		<body>
+			<h1>
+				<i>Traveling with Gen Z</i>
+			</h1>
+			<br>
+				<div class="nav">
+					<a href="personalbloghomepage (1).html">Back to Home Page</a>
+				</div>
+				<br></br>
+				<div class="grid">
+					<div>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dignissimos aspernatur deleniti! Sunt, iusto suscipit. Perferendis deleniti, inventore autem assumenda porro impedit repudiandae pariatur quae eaque sunt laboriosam error architecto.
     </div>
-    <div>
-        <b>Bio:</b>
-        <i>By Brooke Steele, current Udacity Student</i>
-<p>When I first started my Udacity journey, I could barely read through a page of code. Now, I am creating my own web pages! When I'm not working of Front-End I can be found teaching violin in Seattle, WA.</p>  
-    </div>
-    <div>
+					<div>
+						<b>Bio:</b>
+						<i>By Brooke Steele, current Udacity Student</i>
+						<p>When I first started my Udacity journey, I could barely read through a page of code. Now, I am creating my own web pages! When I'm not working of Front-End I can be found teaching violin in Seattle, WA.</p>
+					</div>
+					<div>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia voluptate repellat, unde quisquam nobis rem aspernatur. Praesentium, hic laborum voluptatem cupiditate, quas, impedit magni amet nesciunt a nihil nemo?
     </div>
-  </div>
-
-<br></br>
-    <div class="posts">
-        <div class="item"> 
-            <h2><b>Need a Creative Boost?</b></h2>
-            <h4>June 20, 2020 By Brooke</h4>
-            <p><em>Recent studies have shown that traveling can help you become more creative.</em></p></div>
-            <br></br>
-        <div class="item">
-            <h2><b>Low Risk Travel Options</b></h2>
-            <h4>June 15, 2020 by Brooke</h4>
-            <p><em>It's understandable why most people might have anxiety about flying during a pandemic. However, this doesn't mean that you have to sacrifice those vacation days you requested months ago. Road trips are a great low risk travel option and provide dozens of opportunities to see amazing American landmarks.</em></p>
-        </div>
-       <br></br>
-        <div class="item">  
-            <h2><b>Flight Attendant Themed Dinner</b></h2>
-            <h4>May 19, 2020 by Brooke</h4>
-           <p><em> I was watching "The Tonight Show" not to long ago where guest star Tina Fey explained to the virtual audience how she is keeping her two young daughters entertained during quarentine. She helps them create theme dinners, where they decorate the house, dress up, and cook a meal to that theme. The comedian brought a tape of her youngest daughter dressed like a flight attendant to hand out dinner to the rest of her family.</p>
-     <p>"The nice thing about it is that it takes a lot of time to prepare these dinners" Fey explained. Perfect for kids on Spring Break or parents who want to have a fun night with the family.</em></p>
-       <blockquote cite="https://www.youtube.com/watch?v=Q8o85dhujQM">
-    </blockquote>
-    </div>
-    </div>
-
-    <br></br>
-
-    <ul>
-      <li>Post One</li>
-      <li>Post Two</li>
-      <li>Post Three</li>
-      <li>Post Four</li>
-      <li>Post Five</li>
-    </ul>
-
-    <br></br>
-    <img src="images/chicago2016.jpg" alt="Chicago">
-
-    <div class="buttons">
-        <p><a href="https://www.facebook.com/">Facebook</a></p>
-        <p><a href="https://www.instagram.com">Instagram</a></p>
-        <p><a href="https://www.linkedin.com">LinkedIn</a></p>
-    </div>
-</body>
-</html>
- 
+				</div>
+				<br></br>
+				<div class="posts">
+					<div class="item">
+						<h2>
+							<b>Need a Creative Boost?</b>
+						</h2>
+						<h4>June 20, 2020 By Brooke</h4>
+						<p>
+							<em>Recent studies have shown that traveling can help you become more creative.</em>
+						</p>
+					</div>
+					<br></br>
+					<div class="item">
+						<h2>
+							<b>Low Risk Travel Options</b>
+						</h2>
+						<h4>June 15, 2020 by Brooke</h4>
+						<p>
+							<em>It's understandable why most people might have anxiety about flying during a pandemic. However, this doesn't mean that you have to sacrifice those vacation days you requested months ago. Road trips are a great low risk travel option and provide dozens of opportunities to see amazing American landmarks.</em>
+						</p>
+					</div>
+					<br></br>
+					<div class="item">
+						<h2>
+							<b>Flight Attendant Themed Dinner</b>
+						</h2>
+						<h4>May 19, 2020 by Brooke</h4>
+						<p>
+							<em> I was watching "The Tonight Show" not to long ago where guest star Tina Fey explained to the virtual audience how she is keeping her two young daughters entertained during quarentine. She helps them create theme dinners, where they decorate the house, dress up, and cook a meal to that theme. The comedian brought a tape of her youngest daughter dressed like a flight attendant to hand out dinner to the rest of her family.
+							</p>
+							<p>"The nice thing about it is that it takes a lot of time to prepare these dinners" Fey explained. Perfect for kids on Spring Break or parents who want to have a fun night with the family.
+							</em>
+						</p>
+						<blockquote cite="https://www.youtube.com/watch?v=Q8o85dhujQM"></blockquote>
+					</div>
+				</div>
+				<br></br>
+				<ul>
+					<li>Post One</li>
+					<li>Post Two</li>
+					<li>Post Three</li>
+					<li>Post Four</li>
+					<li>Post Five</li>
+				</ul>
+				<br></br>
+				<img src="images/chicago2016.jpg" alt="Chicago">
+					<div class="buttons">
+						<p>
+							<a href="https://www.facebook.com/">Facebook</a>
+						</p>
+						<p>
+							<a href="https://www.instagram.com">Instagram</a>
+						</p>
+						<p>
+							<a href="https://www.linkedin.com">LinkedIn</a>
+						</p>
+					</div>
+				</body>
+			</html>
